Work with animation container

--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@ Date Last Modified: 12 November, 2021
     </div> <!-- Rows and columns -->
   </div> <!-- Portfolio Container -->
 
-  <div class="container-fluid" id="animations" style="background-color: black;">
+  <div class="container-fluid mb-15px" id="animations" style="background-color: black;">
     <h2 style="color:#DAD7CD; font-family:'IM Fell English SC', serif">Animations</h2>
     <p style="color:#DAD7CD; font-family: 'Raleway', sans-serif">I created all artwork in Adobe Illustrator and the
       animation features were sourced from tutorial materials.</p>
-    <section class="container" id="porthole">
-      <div class="row border border-white" id="boat-wrap">
+    <section class="container">
+      <div class="row border border-white">
         <div class="col">
           <div class="cloud3"><img src="images/Cloud3.svg"></div>
           <div class="tugboat"><img src="images/Tugboat.svg"></div>
@@ -173,13 +173,14 @@ Date Last Modified: 12 November, 2021
           <div class="aqua"><img src="images/Ocean1.png" class="waves"></div>
         </div>
       </div>
-      <div class="row border border-danger" id="city-wrap" style="background-color: #9DB6C4;">
+      <div class="row border border-danger" style="background-color: #9DB6C4;">
         <div class="col">
+
+          <img src="images/Cloud4.svg" alt="clouds" class="cloud4"> <!-- My own drawing -->
+          <img src="images/UFO.svg" alt="UFO" class="UFO"> <!-- My own drawing -->
           <div class="sky-scraper">
             <img src="images/City.svg" alt="skyscrapers"> <!-- My own drawing -->
           </div>
-          <img src="images/Cloud4.svg" alt="clouds" class="cloud4"> <!-- My own drawing -->
-          <img src="images/UFO.svg" alt="UFO" class="UFO"> <!-- My own drawing -->
         </div>
       </div>
     </section>
