Update education content

--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@ Date Last Modified: 12 November, 2021
         <img src="images/WeatheredOak_FilmStripLogo_Light.png" style="width: 150px;" alt="Weathered Oak Media Logo">
       </a>
       <div class="navbar-nav">
-        <a class="nav-item nav-link active" style="color: #9DB6C4;" href="#profile">About Me</a>
-        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#portfolio">Selected Projects</a>
-        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#animations">Animations</a>
-        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#skills">Skills</a>
-        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#education">Education</a>
-        <!-- We don't need no education-->
-        <a class="nav-item nav-link" style="color: #DAD7CD;" href="#footer-contact">Contact</a>
+        <a class="nav-item nav-link active font-weight-bolder" style="color: #9DB6C4;" href="#profile">About Me</a>
+        <a class="nav-item nav-link font-weight-bolder" style="color: #DAD7CD;" href="#portfolio">Selected Projects</a>
+        <a class="nav-item nav-link font-weight-bolder" style="color: #DAD7CD;" href="#animations">Animations</a>
+        <a class="nav-item nav-link font-weight-bolder" style="color: #DAD7CD;" href="#skills">Skills</a>
+        <a class="nav-item nav-link font-weight-bolder" style="color: #DAD7CD;" href="#education">Education</a>
+        <a class="nav-item nav-link font-weight-bolder" style="color: #DAD7CD;" href="#footer-contact">Contact</a>
       </div>
     </div>
   </nav>
@@ -169,7 +168,7 @@ Date Last Modified: 12 November, 2021
         <div class="col">
           <div class="cloud3"><img src="images/Cloud3.svg"></div>
           <div class="tugboat"><img src="images/Tugboat.svg"></div>
-          <div class="lighthouse"><img src="images/Lighthouse.svg"></div>
+          <div class="lighthouse"><img src="images/Lighthouse.svg" class="light"></div>
           <div class="aqua"><img src="images/Ocean1.png" class="waves"></div>
         </div>
       </div>
@@ -185,8 +184,36 @@ Date Last Modified: 12 November, 2021
       </div>
     </section>
   </div> <!-- Animations -->
+  <div class="container-fluid mb-15px" id="education">
+    <div class="content-wrap item-details">
+      <h2 style="font-family: 'IM Fell English SC', serif">Education</h2><!-- We don't need no education-->
+      <section>
+        <h3 style="font-family: 'Raleway', sans-serif">North Island College - Comox Valley, BC</h3>
+        <p style="font-family: 'Raleway', sans-serif">Advanced Digital Design and Development (Design Stream), 2020-2023
+        </p>
+        <p style="font-family: 'Raleway', sans-serif">Three year full-time program covering HTML, CSS, Graphic Design,
+          Branding, Typography, Word Press, PHP
+          and
+          JavaScript.</p>
+        <p style="font-family: 'Raleway', sans-serif">Studying Writing, History, and Art as electives.</p>
+      </section>
+      <section>
+        <h3 style="font-family: 'Raleway', sans-serif">Workplace Safety and Specialty Certifications</h3>
+        <p style="font-family: 'Raleway', sans-serif">On site or company funded off site training in: WHMIS, First Aid,
+          Working at Heights and Fall Safety.</p>
+        <p style="font-family: 'Raleway', sans-serif">Forklift certification.</p>
+        <p style="font-family: 'Raleway', sans-serif">Radio and Communications training.</p>
+        <p style="font-family: 'Raleway', sans-serif">Customer service professionalism.</p>
+        <p style="font-family: 'Raleway', sans-serif">High value transaction and client confidentiality.</p>
+      </section>
+      <section>
+        <h3 style="font-family: 'Raleway', sans-serif">High School Diploma - Campbell River, BC</h3>
+        <p style="font-family: 'Raleway', sans-serif">1995</p>
+      </section>
+    </div>
+  </div> <!-- Education -->
   <footer>
-    <div class="content-wrap" id="contact" style="background-color:#466273;">
+    <div class="container-fluid mb-15px" id="contact" style="background-color:#466273;">
       <h2 style="color:#DAD7CD; font-family:'IM Fell English SC', serif">Say Hello!</h2>
       <p style="color:#DAD7CD; font-family: 'Raleway', sans-serif">Weathered Oak Media &#8226; 12345 Some Random Street
         &nbsp; Comox BC &#8226; (250) 555-1234 </p>
@@ -196,7 +223,7 @@ Date Last Modified: 12 November, 2021
             target="_blank">WeatheredOakMedia</a></li>
       </ul>
     </div>
-  </footer>
+  </footer> <!-- Footer -->
   <script src="https://code.jquery.com/jquery-3.0.0.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
