Added skills w/ progress bars

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ Date Last Modified: 12 November, 2021
     </div> <!-- Rows and columns -->
   </div> <!-- Portfolio Container -->
 
-  <div class="container-fluid mb-15px" id="animations" style="background-color: black;">
+  <div class="container-fluid mb-15px" id="animations" style="background-color: #0b171d;">
     <h2 style="color:#DAD7CD; font-family:'IM Fell English SC', serif">Animations</h2>
     <p style="color:#DAD7CD; font-family: 'Raleway', sans-serif">I created all artwork in Adobe Illustrator and the
       animation features were sourced from tutorial materials.</p>
@@ -184,6 +184,33 @@ Date Last Modified: 12 November, 2021
       </div>
     </section>
   </div> <!-- Animations -->
+  <div class="container-fluid mb-15px" id="skills" style="background-color: #A3B18A;">
+    <h2 style="color:#0b171d; font-family:'IM Fell English SC', serif">Skills</h2>
+    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">HTML</h3>
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped" style="width: 80%;">80</div>
+    </div>
+    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">CSS</h3>
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped" style="width: 75%;">75</div>
+    </div>
+    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">Bootstrap</h3>
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped" style="width: 60%;">60</div>
+    </div>
+    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">Pro Tools</h3>
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped" style="width: 90%;">90</div>
+    </div>
+    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">Adobe Premiere</h3>
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped" style="width: 95%;">95</div>
+    </div>
+    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">Wasting Time</h3>
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped" style="width: 50%;">50</div>
+    </div>
+  </div> <!-- Skills -->
   <div class="container-fluid mb-15px" id="education">
     <div class="content-wrap item-details">
       <h2 style="font-family: 'IM Fell English SC', serif">Education</h2><!-- We don't need no education-->
