--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Date Last Modified: 12 November, 2021
       </section> <!-- Profile -->
     </div> <!-- Profile container -->
   </header>
-  <div class="container-fluid mb-15px" id="portfolio">
+  <div class="container-fluid mb-25px pt-15px" id="portfolio">
     <h2 style="font-family: 'IM Fell English SC', serif">Selected Projects</h2>
 
     <div class="row">
@@ -159,11 +159,11 @@ Date Last Modified: 12 November, 2021
     </div> <!-- Rows and columns -->
   </div> <!-- Portfolio Container -->
 
-  <div class="container-fluid mb-15px" id="animations" style="background-color: #0b171d;">
+  <div class="container-fluid mb-25px pt-15px" id="animations" style="background-color: #0b171d;">
     <h2 style="color:#DAD7CD; font-family:'IM Fell English SC', serif">Animations</h2>
     <p style="color:#DAD7CD; font-family: 'Raleway', sans-serif">I created all artwork in Adobe Illustrator and the
       animation features were sourced from tutorial materials.</p>
-    <section class="container">
+    <section class="container" style="overflow: hidden;">
       <div class="row border border-white">
         <div class="col">
           <div class="cloud3"><img src="images/Cloud3.svg"></div>
@@ -184,7 +184,7 @@ Date Last Modified: 12 November, 2021
       </div>
     </section>
   </div> <!-- Animations -->
-  <div class="container-fluid mb-15px" id="skills" style="background-color: #A3B18A;">
+  <div class="container-fluid mb-25px pt-15px" id="skills" style="background-color: #A3B18A;">
     <h2 style="color:#0b171d; font-family:'IM Fell English SC', serif">Skills</h2>
     <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">HTML</h3>
     <div class="progress">
@@ -211,7 +211,7 @@ Date Last Modified: 12 November, 2021
       <div class="progress-bar progress-bar-striped" style="width: 50%;">50</div>
     </div>
   </div> <!-- Skills -->
-  <div class="container-fluid mb-15px" id="education">
+  <div class="container-fluid mb-25px pt-15px" id="education">
     <div class="content-wrap item-details">
       <h2 style="font-family: 'IM Fell English SC', serif">Education</h2><!-- We don't need no education-->
       <section>
@@ -240,17 +240,21 @@ Date Last Modified: 12 November, 2021
     </div>
   </div> <!-- Education -->
   <footer>
-    <div class="container-fluid mb-15px" id="contact" style="background-color:#466273;">
+    <div class="container-fluid mb-25px pt-15px" id="contact" style="background-color:#466273;">
       <h2 style="color:#DAD7CD; font-family:'IM Fell English SC', serif">Say Hello!</h2>
       <p style="color:#DAD7CD; font-family: 'Raleway', sans-serif">Weathered Oak Media &#8226; 12345 Some Random Street
         &nbsp; Comox BC &#8226; (250) 555-1234 </p>
       <ul class="contact-list">
-        <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#DAD7CD" class="bi bi-envelope" viewBox="0 0 16 16">
-          <path fill-rule="evenodd" d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
-        </svg><a style="color: #9DB6C4;" href="mailto:email@example.com">email@example.com</a></li>
-        <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#DAD7CD" class="bi bi-facebook" viewBox="0 0 16 16">
-          <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
-        </svg><a style="color: #9DB6C4;" href="https://www.facebook.com/WeatheredOakMedia"
+        <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#DAD7CD" class="bi bi-envelope"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+              d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z" />
+          </svg><a style="color: #9DB6C4;" href="mailto:email@example.com">email@example.com</a></li>
+        <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#DAD7CD" class="bi bi-facebook"
+            viewBox="0 0 16 16">
+            <path
+              d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z" />
+          </svg><a style="color: #9DB6C4;" href="https://www.facebook.com/WeatheredOakMedia"
             target="_blank">WeatheredOakMedia</a></li>
       </ul>
     </div>
