--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@ Date Last Modified: 12 November, 2021
       <div class="progress-bar progress-bar-striped" style="width: 50%;">50</div>
     </div>
   </div> <!-- Skills -->
-  <div class="container-fluid mb-25px pt-15px" id="education">
+  <div class="container-fluid mb-25px pt-15px" id="education"><!-- We don't need no education-->
     <div class="content-wrap item-details">
-      <h2 style="font-family: 'IM Fell English SC', serif">Education</h2><!-- We don't need no education-->
+      <h2 style="font-family: 'IM Fell English SC', serif">Education</h2>
       <section>
         <h3 style="font-family: 'Raleway', sans-serif">North Island College - Comox Valley, BC</h3>
         <p style="font-family: 'Raleway', sans-serif">Advanced Digital Design and Development (Design Stream), 2020-2023
