--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Date Last Modified: 12 November, 2021
           <div class="cloud3"><img src="images/Cloud3.svg"></div>
           <div class="tugboat"><img src="images/Tugboat.svg"></div>
           <div class="lighthouse"><img src="images/Lighthouse.svg" class="light"></div>
-          <div class="aqua"><img src="images/Ocean1.png" class="waves"></div>
+          <div class="aqua"><img src="images/Ocean1.png" class="animated-waves"></div>
         </div>
       </div>
       <div class="row border border-danger" style="background-color: #9DB6C4;">
