Correct CSS link error

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Date Last Modified: 12 November, 2021
   <link href="https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&family=Raleway&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <title>Weathered Oak Media</title>
-  <link rel="stylesheet" href="weatheredOakStyle3.css">
+  <link rel="stylesheet" href="css/weatheredOakStyle3.css">
 </head>
 
 <body>
