--- a/index.html
+++ b/index.html
@@ -23,42 +23,44 @@ Date Last Modified: 12 November, 2021
   <nav class="navbar sticky-top navbar-dark bg-dark navbar-expand-md">
     <div class="container">
       <a href="#index.html" class="navbar-brand">
-        <img src="images/WeatheredOak_FilmStripLogo_Light.png" alt="Weathered Oak Media Logo">
+        <img src="images/WeatheredOak_FilmStripLogo_Light.png" alt="Weathered Oak Media Logo" width="80" height="74">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myTogglerNav"
         aria-controls="myTogglerNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      
-    <div class="collapse navbar-collapse" id="myTogglerNav">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link active font-weight-bolder" href="#profile">About Me</a>
-        <a class="nav-item nav-link font-weight-bolder" href="#portfolio">Selected Projects</a>
-        <a class="nav-item nav-link font-weight-bolder" href="#animations">Animations</a>
-        <a class="nav-item nav-link font-weight-bolder" href="#skills">Skills</a>
-        <a class="nav-item nav-link font-weight-bolder" href="#education">Education</a>
-        <a class="nav-item nav-link font-weight-bolder" href="#footer-contact">Contact</a>
-      </div> <!-- The Navbar, where coders go for a drink -->
-    </div> <!-- Collapse -->
-  </div> <!-- Container -->
+
+      <div class="collapse navbar-collapse" id="myTogglerNav">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active font-weight-bolder" href="#profile">About Me</a>
+          <a class="nav-item nav-link font-weight-bolder" href="#portfolio">Selected Projects</a>
+          <a class="nav-item nav-link font-weight-bolder" href="#animations">Animations</a>
+          <a class="nav-item nav-link font-weight-bolder" href="#skills">Skills</a>
+          <a class="nav-item nav-link font-weight-bolder" href="#education">Education</a>
+          <a class="nav-item nav-link font-weight-bolder" href="#footer-contact">Contact</a>
+        </div> <!-- The Navbar, where coders go for a drink -->
+      </div> <!-- Collapse -->
+    </div> <!-- Container -->
   </nav> <!-- The whole Nav and nothing but the Nav -->
-  <header class="header jumbotron jumbotron-fluid" style="background-color: #4D7893;">
-    <div class="container d-flex">
-      <section id="profile" style="color:#DAD7CD">
+  <header>
+    <div class="jumbotron jumbotron-fluid">
+      <div class="container" id="profile">
+
         <img class="d-flex mr-1 img-fluid rounded" src="images/WLProfile.jpg" alt="Profile Photo">
-        <h1 style="font-family: 'IM Fell English SC', serif">Weathered Oak Media</h1>
-        <h2 style="font-family: 'IM Fell English SC', serif">Will Lewthwaite</h2>
-        <h3 style="font-family: 'Raleway', sans-serif">Student, Artist, Musician, Photographer</h3>
-        <p style="font-family: 'Raleway', sans-serif">In 2020 I returned to school after many years of working in
+        <h1>Weathered Oak Media</h1>
+        <h2>Will Lewthwaite</h2>
+        <h3>Student, Artist, Musician, Photographer</h3>
+        <p>In 2020 I returned to school after many years of working in
           various fields to build on that
           experience with new skills that I can apply towards a career in design and media.
           This webpage is a work in progress. As I learn new things the design will also improve.
         </p>
-        <p style="font-family: 'Raleway', sans-serif">I live in the Comox Valley with my wife and our cat. I enjoy
+        <p>I live in the Comox Valley with my wife and our cat. I enjoy
           music, art, history, nature, and science.
           I play guitar, percussion, and some keyboards. I do a lot of home recording, and as a hobby I create videos
           for my YouTube channel <a style="color:#FFE66D"
-            href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA" target="_blank">Weathered Oak Media</a>.</p>
+            href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA" target="_blank">Weathered Oak Media</a>.
+        </p>
 
         <button type="button" class="btn btn-primary mt-4" data-toggle="modal" data-target="#contactModal">Say
           Hello!</button> <!-- CTA button -->
@@ -99,8 +101,8 @@ Date Last Modified: 12 November, 2021
             </div> <!-- Modal content -->
           </div> <!-- Modal dialogue -->
         </div> <!-- Modal Contact Form-->
-      </section> <!-- Profile -->
-    </div> <!-- Profile container -->
+      </div> <!-- Profile container -->
+    </div>
   </header>
   <div class="container-fluid mb-25px pt-15px" id="portfolio">
     <h2 style="font-family: 'IM Fell English SC', serif">Selected Projects</h2>
@@ -218,7 +220,8 @@ Date Last Modified: 12 November, 2021
       <div class="progress-bar progress-bar-striped" style="width: 50%;">50</div>
     </div>
   </div> <!-- Skills -->
-  <div class="container-fluid mb-25px pt-15px" id="education"><!-- We don't need no education-->
+  <div class="container-fluid mb-25px pt-15px" id="education">
+    <!-- We don't need no education-->
     <div class="content-wrap item-details">
       <h2 style="font-family: 'IM Fell English SC', serif">Education</h2>
       <section>
