--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 NIC DGL-203
 Assignment 3c - Master Stylesheet
 Author: Will Lewthwaite
-Date Last Modified: 12 November, 2021
+Date Last Modified: 16 November, 2021
 -->
 
 <head>
@@ -45,18 +45,17 @@ Date Last Modified: 12 November, 2021
   <header>
     <div class="jumbotron jumbotron-fluid">
       <div class="container" id="profile">
-
-        <img class="d-flex mr-1 img-fluid rounded" src="images/WLProfile.jpg" alt="Profile Photo">
-        <h1>Weathered Oak Media</h1>
+        <h1 class="display-3">Weathered Oak Media</h1>
         <h2>Will Lewthwaite</h2>
         <h3>Student, Artist, Musician, Photographer</h3>
-        <p>In 2020 I returned to school after many years of working in
-          various fields to build on that
-          experience with new skills that I can apply towards a career in design and media.
+        <p class="lead">In 2020 I returned to school after many years of working in
+          various fields to build on those
+          experiences with new skills that I can apply towards a career in design and media.
           This webpage is a work in progress. As I learn new things the design will also improve.
         </p>
-        <p>I live in the Comox Valley with my wife and our cat. I enjoy
-          music, art, history, nature, and science.
+        <hr class="my-2">
+        <p class="lead">I live in the Comox Valley with my wife and our cat. I enjoy
+          music, art, history, nature, and science. I also believe a little humor goes a long way.
           I play guitar, percussion, and some keyboards. I do a lot of home recording, and as a hobby I create videos
           for my YouTube channel <a style="color:#FFE66D"
             href="https://www.youtube.com/channel/UCxy8o0J-DcobOQG56dG_FbA" target="_blank">Weathered Oak Media</a>.
