Debug jumbotron, remove image
Also reset navbar breakpoint.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Date Last Modified: 16 November, 2021
 
 <body>
 
-  <nav class="navbar sticky-top navbar-dark bg-dark navbar-expand-md">
+  <nav class="navbar sticky-top navbar-dark bg-dark navbar-expand-lg">
     <div class="container">
       <a href="#index.html" class="navbar-brand">
         <img src="images/WeatheredOak_FilmStripLogo_Light.png" alt="Weathered Oak Media Logo" width="80" height="74">
@@ -51,7 +51,7 @@ Date Last Modified: 16 November, 2021
         <p class="lead">In 2020 I returned to school after many years of working in
           various fields to build on those
           experiences with new skills that I can apply towards a career in design and media.
-          This webpage is a work in progress. As I learn new things the design will also improve.
+          This webpage is a work in progress.
         </p>
         <hr class="my-2">
         <p class="lead">I live in the Comox Valley with my wife and our cat. I enjoy
