Edit modal, edit btn colors

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@ Date Last Modified: 16 November, 2021
         </div> <!-- The Navbar, where coders go for a drink -->
       </div> <!-- Collapse -->
     </div> <!-- Container -->
-  </nav> <!-- The whole Nav and nothing but the Nav -->
-  <header>
+  </nav> <!-- The Nav, the whole Nav, and nothing but the Nav -->
+  <header id="profile">
     <div class="jumbotron jumbotron-fluid">
-      <div class="container" id="profile">
+      <div class="container">
         <h1 class="display-3">Weathered Oak Media</h1>
         <h2>Will Lewthwaite</h2>
         <h3>Student, Artist, Musician, Photographer</h3>
@@ -74,7 +74,7 @@ Date Last Modified: 16 November, 2021
                 </button>
               </div>
               <div class="modal-body">
-                <p style="font-family: 'Raleway', sans-serif">
+                <p>
                   Want to get in touch? Leave your name and email! Don't worry, your info is safe and I won't solicit.
                 </p>
                 <form>
@@ -101,7 +101,7 @@ Date Last Modified: 16 November, 2021
           </div> <!-- Modal dialogue -->
         </div> <!-- Modal Contact Form-->
       </div> <!-- Profile container -->
-    </div>
+    </div> <!-- JUMBOTRON not to be confused with skinnytron-->
   </header>
   <div class="container-fluid mb-25px pt-15px" id="portfolio">
     <h2 style="font-family: 'IM Fell English SC', serif">Selected Projects</h2>
