Attempt to fix bugs
Remove styles from html, resize containers, could not fix

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ Date Last Modified: 16 November, 2021
       </div> <!-- Collapse -->
     </div> <!-- Container -->
   </nav> <!-- The Nav, the whole Nav, and nothing but the Nav -->
+
   <header id="profile">
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
@@ -102,17 +103,18 @@ Date Last Modified: 16 November, 2021
         </div> <!-- Modal Contact Form-->
       </div> <!-- Profile container -->
     </div> <!-- JUMBOTRON not to be confused with skinnytron-->
-  </header>
-  <div class="container-fluid mb-25px pt-15px" id="portfolio">
-    <h2 style="font-family: 'IM Fell English SC', serif">Selected Projects</h2>
+  </header> <!-- Profile -->
+
+  <div class="container container-fluid" id="portfolio">
+    <h2>Selected Projects</h2>
 
     <div class="row">
       <div class="col-sm d-flex">
         <div class="card h-100">
           <img class="card-img-top" src="images/GuitarNerdsCover.jpg" alt="Magazine Cover">
           <div class="card-body">
-            <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">Guitar Nerds Magazine Cover</h4>
-            <p class="card-text" style="font-family: 'Raleway', sans-serif">For my DGL 112 Typography course, a major
+            <h4 class="card-title">Guitar Nerds Magazine Cover</h4>
+            <p class="card-text">For my DGL 112 Typography course, a major
               project was designing a magazine cover plus
               the first few
               pages. This included advertising, a letter from the editor, and an article. I designed the entire project
@@ -128,9 +130,9 @@ Date Last Modified: 16 November, 2021
         <div class="card h-100">
           <img class="card-img-top" src="images/BeachMasse3_WL.jpg" alt="Illustrated poster">
           <div class="card-body">
-            <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">Angry Seagull Social Good Poster
+            <h4 class="card-title">Angry Seagull Social Good Poster
             </h4>
-            <p class="card-text" style="font-family: 'Raleway', sans-serif">A notable project from my DGL 102 course was
+            <p class="card-text">A notable project from my DGL 102 course was
               a Social Good Call to Action poster. Using
               design principles
               we learned throughout the year, we chose a worthy cause and created posters to raise awareness of an issue
@@ -148,8 +150,8 @@ Date Last Modified: 16 November, 2021
         <div class="card h-100">
           <img class="card-img-top" src="images/WillCaveArt.jpg" alt="Cave Art Drawing">
           <div class="card-body">
-            <h4 class="card-title" style="font-family: 'IM Fell English SC', serif">BC 30,000 BC</h4>
-            <p class="card-text" style="font-family: 'Raleway', sans-serif">As a term project in FIN 100 Art History,
+            <h4 class="card-title">BC 30,000 BC</h4>
+            <p class="card-text">As a term project in FIN 100 Art History,
               students were asked to analyze and critique a
               work of art from
               a period of history within the textbook and then come up with their own creative response in whatever
@@ -160,29 +162,26 @@ Date Last Modified: 16 November, 2021
               video documenting
               the entire project. This involved research, voice-over recordings, and composing and recording the
               soundtrack.</p>
-            <a href="https://www.youtube.com/watch?v=9argG19zbzU" class="btn btn-success">Watch the video!</a>
+            <a href="https://www.youtube.com/watch?v=9argG19zbzU" class="btn btn-primary">Watch the video!</a>
           </div>
         </div> <!-- card -->
       </div> <!-- col -->
     </div> <!-- Rows and columns -->
   </div> <!-- Portfolio Container -->
 
-  <div class="container-fluid mb-25px pt-15px" id="animations" style="background-color: #0b171d;">
-    <h2 style="color:#DAD7CD; font-family:'IM Fell English SC', serif">Animations</h2>
-    <p style="color:#DAD7CD; font-family: 'Raleway', sans-serif">I created all artwork in Adobe Illustrator and the
+  <div class="container container-fluid" id="animations">
+    <h2>Animations</h2>
+    <p>I created all artwork in Adobe Illustrator and the
       animation features were sourced from tutorial materials.</p>
-    <section class="container" style="overflow: hidden;">
-      <div class="row border border-white">
-        <div class="col">
+    
+      <div class="row">
+        <div class="col-sm-6" id="boat-wrap">
           <div class="cloud3"><img src="images/Cloud3.svg"></div>
           <div class="tugboat"><img src="images/Tugboat.svg"></div>
           <div class="lighthouse"><img src="images/Lighthouse.svg" class="light"></div>
           <div class="aqua"><img src="images/Ocean1.png" class="animated-waves"></div>
         </div>
-      </div>
-      <div class="row border border-danger" style="background-color: #9DB6C4;">
-        <div class="col">
-
+        <div class="col-sm-6">
           <img src="images/Cloud4.svg" alt="clouds" class="cloud4"> <!-- My own drawing -->
           <img src="images/UFO.svg" alt="UFO" class="UFO"> <!-- My own drawing -->
           <div class="sky-scraper">
@@ -190,68 +189,68 @@ Date Last Modified: 16 November, 2021
           </div>
         </div>
       </div>
-    </section>
-  </div> <!-- Animations -->
-  <div class="container-fluid mb-25px pt-15px" id="skills" style="background-color: #A3B18A;">
-    <h2 style="color:#0b171d; font-family:'IM Fell English SC', serif">Skills</h2>
-    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">HTML</h3>
+
+    </div> <!-- Animations -->
+  <div class="container container-fluid" id="skills">
+    <h2>Skills</h2>
+    <h3>HTML</h3>
     <div class="progress">
       <div class="progress-bar progress-bar-striped" style="width: 80%;">80</div>
     </div>
-    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">CSS</h3>
+    <h3>CSS</h3>
     <div class="progress">
       <div class="progress-bar progress-bar-striped" style="width: 75%;">75</div>
     </div>
-    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">Bootstrap</h3>
+    <h3>Bootstrap</h3>
     <div class="progress">
       <div class="progress-bar progress-bar-striped" style="width: 60%;">60</div>
     </div>
-    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">Pro Tools</h3>
+    <h3>Pro Tools</h3>
     <div class="progress">
       <div class="progress-bar progress-bar-striped" style="width: 90%;">90</div>
     </div>
-    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">Adobe Premiere</h3>
+    <h3>Adobe Premiere</h3>
     <div class="progress">
       <div class="progress-bar progress-bar-striped" style="width: 95%;">95</div>
     </div>
-    <h3 style="color: #0b171d; font-family: 'Raleway', sans-serif">Wasting Time</h3>
+    <h3>Wasting Time</h3>
     <div class="progress">
       <div class="progress-bar progress-bar-striped" style="width: 50%;">50</div>
     </div>
   </div> <!-- Skills -->
-  <div class="container-fluid mb-25px pt-15px" id="education">
+  <div class="container container-fluid" id="education">
     <!-- We don't need no education-->
     <div class="content-wrap item-details">
-      <h2 style="font-family: 'IM Fell English SC', serif">Education</h2>
+      <h2>Education</h2>
       <section>
-        <h3 style="font-family: 'Raleway', sans-serif">North Island College - Comox Valley, BC</h3>
-        <p style="font-family: 'Raleway', sans-serif">Advanced Digital Design and Development (Design Stream), 2020-2023
+        <h3>North Island College - Comox Valley, BC</h3>
+        <p>Advanced Digital Design and Development (Design Stream), 2020-2023
         </p>
-        <p style="font-family: 'Raleway', sans-serif">Three year full-time program covering HTML, CSS, Graphic Design,
+        <p>Three year full-time program covering HTML, CSS, Graphic Design,
           Branding, Typography, Word Press, PHP
           and
           JavaScript.</p>
-        <p style="font-family: 'Raleway', sans-serif">Studying Writing, History, and Art as electives.</p>
+        <p>Studying Writing, History, and Art as electives.</p>
       </section>
       <section>
-        <h3 style="font-family: 'Raleway', sans-serif">Workplace Safety and Specialty Certifications</h3>
-        <p style="font-family: 'Raleway', sans-serif">On site or company funded off site training in: WHMIS, First Aid,
+        <h3>Workplace Safety and Specialty Certifications</h3>
+        <p>On site or company funded off site training in: WHMIS, First Aid,
           Working at Heights and Fall Safety.</p>
-        <p style="font-family: 'Raleway', sans-serif">Forklift certification.</p>
-        <p style="font-family: 'Raleway', sans-serif">Radio and Communications training.</p>
-        <p style="font-family: 'Raleway', sans-serif">Customer service professionalism.</p>
-        <p style="font-family: 'Raleway', sans-serif">High value transaction and client confidentiality.</p>
+        <p>Forklift certification.</p>
+        <p>Radio and Communications training.</p>
+        <p>Customer service professionalism.</p>
+        <p>High value transaction and client confidentiality.</p>
       </section>
       <section>
-        <h3 style="font-family: 'Raleway', sans-serif">High School Diploma - Campbell River, BC</h3>
-        <p style="font-family: 'Raleway', sans-serif">1995</p>
+        <h3>High School Diploma - Campbell River, BC</h3>
+        <p>1995</p>
       </section>
     </div>
   </div> <!-- Education -->
-  <footer>
-    <div class="container-fluid mb-25px pt-15px" id="contact" style="background-color:#466273;">
-      <h2 style="color:#DAD7CD; font-family:'IM Fell English SC', serif">Say Hello!</h2>
-      <p style="color:#DAD7CD; font-family: 'Raleway', sans-serif">Weathered Oak Media &#8226; 12345 Some Random Street
+  <footer class="footer">
+    <div class="container container-fluid" id="contact">
+      <h2>Say Hello!</h2>
+      <p>Weathered Oak Media &#8226; 12345 Some Random Street
         &nbsp; Comox BC &#8226; (250) 555-1234 </p>
       <ul class="contact-list">
         <li><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#DAD7CD" class="bi bi-envelope"
